2008-05-08  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* vala/valastruct.vala:

	Check number of type arguments in object creation expression,
	patch by Andreas Brauchli, fixes bug 528833

2008-05-08  Jaap A. Haitsma  <jaap@haitsma.org>

	reviewed by: Jürg Billeter

	* vapi/hal.vapi:
	Also return length in string array returned from
	libhal_find_device_by_capability. Fixes bug #530738

2008-05-07  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:

	Support signals in D-Bus services, patch by Yu Feng

2008-05-03  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vala/valastruct.vala:

	Support custom cname for structs in InterfaceWriter

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala: inherit integer_type and floating_type,
	fixes bug 530600

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valadatatype.vala:
	* gobject/valaccodegeneratorsignal.vala:

	Fix crash when using arrays in D-Bus services, fixes bug 530455

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valainitializerlist.vala: implement replace_expression

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala:
	* gobject/valaccodegenerator.vala:

	Fix error handling in catch and finally clauses, fixes bug 530212

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_rand*_int and g_rand*_double bindings,
	patch Ondrej Jirman, fixes bug 530207

2008-05-02  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/scanner.c: (g_igenerator_add_symbol):

	Do not add duplicate symbols,
	patch by Étienne Bersac, fixes bug 528254

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* doc/vala/types.xml:
	* doc/vala/default.css:
	* doc/vala/xhtml.xsl:

	Extend types section, based on patch by Phil Housley

2008-05-01  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vala/valanullchecker.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala: